# pptranssmt

./: AUTHORS  CMakeLists.txt  README.md
POGLoader/: CMakeLists.txt  pog.cpp  pog.h
PPTRANSSMT/: CMakeLists.txt  decomposition.cpp  ppTrans.cpp  ppTransIncr.cpp  ppTransNonIncr.cpp  ppTransSmt.cpp  utils.cpp
PPTransTPTP/: CMakeLists.txt  TPTPaxioms.ax  TPTPfilter.cpp  decomposition.cpp  decomposition.h  ppTransConsoleTPTP.cpp  ppTransTPTP.cpp  ppTransTPTP.h  ppTransTPTPNonIncr.cpp  ppTransTPTPNonIncr.h  utils.cpp
